feature(general): add font-awesome css and custom webfont for generating social icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic'>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+<link rel="stylesheet" href="css/font-awesome.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/animate.css">
 
@@ -304,48 +305,60 @@
                 <div class="team-member-row clearfix">
                     <!--====== Brandon Cooper  ======-->
                     <div class="team-member team-member-first">
-                        <a href="#" target="_blank">
-                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                            <h3 class="member_name">Brandon Cooper</h3>
-                            <p>Lorem Ipsum dolor simet</p>
-                        </a>
+                        <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                        <h3 class="member_name">Brandon Cooper</h3>
+                        <ul class="team-member-social">
+                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
+                            <li><a href="#"><i class="icon-github"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                        </ul>
                     </div>
 
                     <!--====== Eric Hannum  ======-->
                     <div class="team-member">
-                        <a href="#" target="_blank">
-                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                            <h3 class="member_name">Eric Hannum</h3>
-                            <p>Lorem Ipsum dolor simet</p>
-                        </a>
+                        <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                        <h3 class="member_name">Eric Hannum</h3>
+                        <ul class="team-member-social">
+                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
+                            <li><a href="#"><i class="icon-github"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                        </ul>
                     </div>
 
                     <!--====== Andrew Lu  ======-->
                     <div class="team-member">
-                        <a href="#" target="_blank">
-                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                            <h3 class="member_name">Andrew Lu</h3>
-                            <p>Lorem Ipsum dolor simet</p>
-                        </a>
+                        <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                        <h3 class="member_name">Andrew Lu</h3>
+                        <ul class="team-member-social">
+                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
+                            <li><a href="#"><i class="icon-github"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                        </ul>
                     </div>
 
                     <!--====== Joao Stein ======-->
                     <div class="team-member">
-                        <a href="#" target="_blank">
-                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                            <h3 class="member_name">Joao Stein</h3>
-                            <p>Lorem Ipsum dolor simet</p>
-                        </a>
+                        <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                        <h3 class="member_name">Joao Stein</h3>
+                        <ul class="team-member-social">
+                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
+                            <li><a href="#"><i class="icon-github"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                        </ul>
                     </div>
+
 
                     <!--====== Sam Stites ======-->
                     <div class="team-member">
-                        <a href="#" target="_blank">
-                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                            <h3 class="member_name">Sam Stites</h3>
-                            <p>Lorem Ipsum dolor simet</p>
-                        </a>
+                        <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                        <h3 class="member_name">Sam Stites</h3>
+                        <ul class="team-member-social">
+                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
+                            <li><a href="#"><i class="icon-github"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                        </ul>
                     </div>
+
                 </div> <!-- .team-member-row -->
 
                 <div class="team-member-row clearfix">
