feature(team): add mouseover/leave effect toggling the team-role description for each team member

--- a/index.html
+++ b/index.html
@@ -305,8 +305,11 @@
                 <div class="team-member-row clearfix">
                     <!--====== Brandon Cooper  ======-->
                     <div class="team-member team-member-first">
-                        <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                        <h3 class="member_name">Brandon Cooper</h3>
+                        <div class="team-member-info">
+                            <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                            <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                            <h3 class="team-member-name">Brandon Cooper</h3>
+                        </div>
                         <ul class="team-member-social">
                             <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
                             <li><a href="#"><i class="icon-github"></i></a></li>
@@ -316,8 +319,11 @@
 
                     <!--====== Eric Hannum  ======-->
                     <div class="team-member">
-                        <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                        <h3 class="member_name">Eric Hannum</h3>
+                        <div class="team-member-info">
+                            <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                            <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                            <h3 class="team-member-name">Eric Hannum</h3>
+                        </div>
                         <ul class="team-member-social">
                             <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
                             <li><a href="#"><i class="icon-github"></i></a></li>
@@ -327,8 +333,11 @@
 
                     <!--====== Andrew Lu  ======-->
                     <div class="team-member">
-                        <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                        <h3 class="member_name">Andrew Lu</h3>
+                        <div class="team-member-info">
+                            <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                            <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                            <h3 class="team-member-name">Andrew Lu</h3>
+                        </div>
                         <ul class="team-member-social">
                             <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
                             <li><a href="#"><i class="icon-github"></i></a></li>
@@ -338,8 +347,11 @@
 
                     <!--====== Joao Stein ======-->
                     <div class="team-member">
-                        <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                        <h3 class="member_name">Joao Stein</h3>
+                        <div class="team-member-info">
+                            <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                            <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                            <h3 class="team-member-name">Joao Stein</h3>
+                        </div>
                         <ul class="team-member-social">
                             <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
                             <li><a href="#"><i class="icon-github"></i></a></li>
@@ -350,8 +362,27 @@
 
                     <!--====== Sam Stites ======-->
                     <div class="team-member">
-                        <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                        <h3 class="member_name">Sam Stites</h3>
+                        <div class="team-member-info">
+                            <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                            <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                            <h3 class="team-member-name">Sam Stites</h3>
+                        </div>
+                        <ul class="team-member-social">
+                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
+                            <li><a href="#"><i class="icon-github"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                        </ul>
+                    </div>
+                </div> <!-- .team-member-row -->
+
+                <div class="team-member-row clearfix">
+                    <!--====== Andrew Spade ======-->
+                    <div class="team-member team-member-first">
+                        <div class="team-member-info">
+                            <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                            <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                            <h3 class="team-member-name">Andrew Spade</h3>
+                        </div>
                         <ul class="team-member-social">
                             <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
                             <li><a href="#"><i class="icon-github"></i></a></li>
@@ -359,43 +390,46 @@
                         </ul>
                     </div>
 
-                </div> <!-- .team-member-row -->
-
-                <div class="team-member-row clearfix">
-                    <!--====== Andrew Spade ======-->
-                    <div class="team-member team-member-first">
-                        <a href="http://about.me/a.spade" target="_blank">
-                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                            <h3 class="member_name">Andrew Spade</h3>
-                            <p>Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
-                        </a>
-                    </div>
-
                     <!--====== Gary Ryan ======-->
                     <div class="team-member">
-                        <a href="http://www.linkedin.com/in/garytryan" target="_blank">
-                            <img src="images/team/GaryRyan.jpg" alt="image"  class="member_picture">
-                            <h3  class="member_name">Gary Ryan</h3>
-                            <p>Combat Mechanics, Weapon Design, Lighting, Particle Systems, Pyrotechnics.</p>
-                        </a>
+                        <div class="team-member-info">
+                            <p class="team-role">Combat Mechanics, Weapon Design, Lighting, Particle Systems, Pyrotechnics</p>
+                            <img class="team-member-picture" src="images/team/GaryRyan.jpg" alt="image">
+                            <h3 class="team-member-name">Gary Ryan</h3>
+                        </div>
+                        <ul class="team-member-social">
+                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
+                            <li><a href="#"><i class="icon-github"></i></a></li>
+                            <li><a href="http://www.linkedin.com/in/garytryan"><i class="icon-linkedin-sign"></i></a></li>
+                        </ul>
                     </div>
 
                     <!--====== Felix Tripier ======-->
                     <div class="team-member">
-                        <a href="http://www.linkedin.com/pub/felix-tripier/70/2b/a35/" target="_blank">
-                            <img src="images/team/FelixTrepier.jpg" alt="image"  class="member_picture">
-                            <h3  class="member_name">Felix Tripier</h3>
-                            <p>HUD, Flight Controls, Game Logic, Multiplayer Support, Audio Design</p>
-                        </a>
+                        <div class="team-member-info">
+                            <p class="team-role">HUD, Flight Controls, Game Logic, Multiplayer Support, Audio Design</p>
+                            <img class="team-member-picture" src="images/team/FelixTrepier.jpg" alt="image">
+                            <h3 class="team-member-name">Felix Tripier</h3>
+                        </div>
+                        <ul class="team-member-social">
+                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
+                            <li><a href="#"><i class="icon-github"></i></a></li>
+                            <li><a href="http://www.linkedin.com/pub/felix-tripier/70/2b/a35/"><i class="icon-linkedin-sign"></i></a></li>
+                        </ul>
                     </div>
 
                     <!--====== Phillip Alexander ======-->
                     <div class="team-member">
-                        <a href="http://phillipalexander.io" target="_blank">
-                            <img src="images/team/PhillipAlexander.jpg" alt="image"  class="member_picture">
-                            <h3  class="member_name">Phillip Alexander</h3>
-                            <p>Team Lead, Client-Server Architecture, Build Automation, Website Design</p>
-                        </a>
+                        <div class="team-member-info">
+                            <p class="team-role">Team Lead, Client-Server Architecture, Build Automation, Website Design</p>
+                            <img class="team-member-picture" src="images/team/PhillipAlexander.jpg" alt="image">
+                            <h3 class="team-member-name">Phillip Alexander</h3>
+                        </div>
+                        <ul class="team-member-social">
+                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
+                            <li><a href="#"><i class="icon-github"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                        </ul>
                     </div>
                 </div> <!-- .team-member-row -->
             </div> <!-- #members -->
