--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <title>Satellite</title>
 
 <!--====== CSS Files ======-->
-<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic'>
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700">
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,300italic">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
 <link rel="stylesheet" href="css/font-awesome.css">
