feature(team): add team member images

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <div class="team-member team-member-first">
                         <div class="team-member-info">
                             <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
-                            <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                            <img class="team-member-picture" src="images/team/BrandonCooper.jpg" alt="image">
                             <h3 class="team-member-name">Brandon Cooper</h3>
                         </div>
                         <ul class="team-member-social">
@@ -322,7 +322,7 @@
                     <div class="team-member">
                         <div class="team-member-info">
                             <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
-                            <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                            <img class="team-member-picture" src="images/team/EricHannum.jpg" alt="image">
                             <h3 class="team-member-name">Eric Hannum</h3>
                         </div>
                         <ul class="team-member-social">
@@ -336,7 +336,7 @@
                     <div class="team-member">
                         <div class="team-member-info">
                             <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
-                            <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                            <img class="team-member-picture" src="images/team/AndrewLu.jpg" alt="image">
                             <h3 class="team-member-name">Andrew Lu</h3>
                         </div>
                         <ul class="team-member-social">
@@ -350,7 +350,7 @@
                     <div class="team-member">
                         <div class="team-member-info">
                             <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
-                            <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                            <img class="team-member-picture" src="images/team/JoaoStein.jpg" alt="image">
                             <h3 class="team-member-name">Joao Stein</h3>
                         </div>
                         <ul class="team-member-social">
@@ -365,7 +365,7 @@
                     <div class="team-member">
                         <div class="team-member-info">
                             <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
-                            <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                            <img class="team-member-picture" src="images/team/SamStites.jpg" alt="image">
                             <h3 class="team-member-name">Sam Stites</h3>
                         </div>
                         <ul class="team-member-social">
