--- a/index.html
+++ b/index.html
@@ -126,92 +126,74 @@
     ==================================
     -->
 
-    <div class="quickstart slide" id="slide3" data-section="3" data-stellar-background-ratio="0.5">
+    <section class="quickstart slide" id="slide3" data-section="3" data-stellar-background-ratio="0.5">
         <div class="container clearfix">
             <div class="row-fluid title">
                 <h1>Quickstart</h1>
                 <h2>How to play</h2>
             </div>
-            <div class="offset1 row-fluid">
-                <!--Pitch-->
-                <div class="span2">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Pitch</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="price"><span>⬆<br>⬇</span></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <!--Roll-->
-                <div class="span2">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Roll</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="price"><span>A<br>D</span></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <!--Yaw-->
-                <div class="span2">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Yaw</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="price"><span>⬅<br>➡</span></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <!--Thrust-->
-                <div class="span2">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Thrust</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="price"><span>W<br>S</span></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <!--Fire!-->
-                <div class="span2">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Fire</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="price"><span>CLICK<br>SPACE</span></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    </table>
-                </div>
+            <div class="row-fluid">
+                <div class="controls-wrapper clearfix">
+                    <!-- Pitch -->
+                    <div class="controls span2">
+                        <h3>Pitch</h3>
+                        <p><span>⬆<br>⬇</span></p>
+                    </div>
+
+                    <!-- Roll -->
+                    <div class="controls span2">
+                        <h3>Roll</h3>
+                        <p><span>a<br>d</span></p>
+                    </div>
+
+                    <!-- Yaw -->
+                    <div class="controls span2">
+                        <h3>Yaw</h3>
+                        <p><span>⬅<br>➡</span></p>
+                    </div>
+
+                    <!-- Thrust -->
+                    <div class="controls span2">
+                        <h3>Thrust</h3>
+                        <p><span>w<br>s</span></p>
+                    </div>
+
+                    <!-- Fire -->
+                    <div class="controls span2">
+                        <h3>Fire</h3>
+                        <p><span>Click<br>Space</span></p>
+                    </div>
+                </div>  <!-- .controls-wrapper -->
+
+                <div class="controls-wrapper clearfix">
+                    <!-- Menu -->
+                    <div class="controls span2">
+                        <h3>Menu</h3>
+                        <p><span>Q</span></p>
+                    </div>
+
+                    <!-- Rotate targets -->
+                    <div class="controls span2">
+                        <h3>Targeting</h3>
+                        <p><span>E</span></p>
+                    </div>
+
+                    <!-- Toggle Camera view -->
+                    <div class="controls span2">
+                        <h3>Camera</h3>
+                        <p><span>V</span></p>
+                    </div>
+
+                    <!-- Fullscreen -->
+                    <div class="controls span2">
+                        <h3>Fullscreen</h3>
+                        <p><span>Enter</span></p>
+                    </div>
+
+                </div> <!-- .controls-wrapper -->
             </div>
         </div>
-    </div>
+    </section>
 
     <!--
     ==================================
