--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             <div class="row-fluid title">
                 <h1>Quickstart</h1>
                 <h2>How to play</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci molestiae quibusdam perferendis non praesentium fuga assumenda! Iste similique optio officiis sapiente nihil dolorem ex harum officia ipsum quae. Provident, porro.</p>
             </div>
             <div class="row-fluid">
                 <div class="controls-wrapper clearfix">
@@ -189,7 +190,6 @@
                         <h3>Fullscreen</h3>
                         <p><span>Enter</span></p>
                     </div>
-
                 </div> <!-- .controls-wrapper -->
             </div>
         </div>
