--- a/index.html
+++ b/index.html
@@ -214,62 +214,63 @@
     ==================================
     -->
 
-    <div class="techstack slide" id="slide4" data-section="4" data-stellar-background-ratio="0.5">
+    <section class="techstack slide" id="slide4" data-section="4" data-stellar-background-ratio="0.5">
         <div class="container clearfix">
-            <!-- Page title and description-->
-
             <div class="row-fluid title">
                 <h1>tech stack</h1>
                 <h2>Peek behind the curtain...</h2>
             </div>
-            <div class="row-fluid" id="techstack">
 
-                <div class="span4">
-                    <!--Node.js-->
-                    <div class="serv">
-                        <div class="serv-img"> <img src="images/techstack/se2.png"   alt="id"> </div>
-                        <h3>Node.js</h3>
-                        <p>Server-side javascript is the future, and we're running at the front of the pack. Satellite, is, at it's very core, javascript-based. We take full advantage of javascript's non-blocking asynchronus I/O to make sure that our server can effortlessely handle multiple games, each with up to sixteen players at once, without missing a beat.</p>
+            <div class="row-fluid">
+                <div class="tech-wrapper">
+                    <!-- Node.js -->
+                    <div class="tech-grid">
+                        <a href="http://nodejs.org/" target="_blank"><img src="images/techstack/node.gif" alt="Node.js"></a>
                     </div>
-                    <!--Socket.io-->
-                    <div class="serv">
-                        <div class="serv-img"> <img src="images/techstack/se2.png"  alt="paintbrush"> </div>
-                        <h3>Socket.io</h3>
-                        <p>Satellite uses the WebSocket protocol to establish clear communication between client and server by default, but if needed can fallback on multiple other methods, such as Adobe Flash sockets, JSONP polling, and AJAX long polling, all via the power of socket.io.</p>
+
+                    <!-- Three.js -->
+                    <div class="tech-grid">
+                        <a href="http://threejs.org/" target="_blank"><img src="images/techstack/threejs.gif" alt="Three.js"></a>
                     </div>
-                </div>
-                <div class="span4">
-                    <!--Three.js-->
-                    <div class="serv">
-                        <div class="serv-img"> <img src="images/techstack/se2.png" alt="cogs"> </div>
-                        <h3>Three.js</h3>
-                        <p>Used to create rich GPU-accelerated 3d animations written entirely in JavaScript without relying on proprietary browser plugins. WebGL is the future of client-side ui rendering, and thanks to Three.js, you can expierence it while playing Satellite, today.</p>
+
+                    <!-- Oculus rift -->
+                    <div class="tech-grid">
+                        <a href="http://www.oculusvr.com/" target="_blank"><img src="images/techstack/oculus.gif" alt="Oculus Rift"></a>
                     </div>
-                    <!--Grunt-->
-                    <div class="serv">
-                        <div class="serv-img"> <img src="images/techstack/se2.png" alt="wordpress"> </div>
-                        <h3>Grunt</h3>
-                        <p>Projects of this scope require robust, and consistent development, deployment, and production environments. Grunt allows us to streamline our workflow from start to finish.</p>
+
+                    <!-- Socket.io -->
+                    <div class="tech-grid">
+                        <a href="http://socket.io/" target="_blank"><img src="images/techstack/socketio.gif" alt="Socket.io"></a>
                     </div>
-                </div>
-                <div class="span4">
-                    <!--Physijs-->
-                    <div class="serv">
-                        <div class="serv-img"> <img src="images/techstack/se2.png" alt="wordpress"> </div>
-                        <h3>Physijs</h3>
-                        <p>
-                        Phsyijs allows Satellite to run its physics engine in a separate thread (via web workers) to avoid impacting in your application's performance and taking up your our 3D rendering time.</p>
+
+                    <!-- Redis -->
+                    <div class="tech-grid">
+                        <a href="http://redis.io/" target="_blank"><img src="images/techstack/redis.gif" alt="Redis"></a>
                     </div>
-                    <!--Pseudoclass-->
-                    <div class="serv">
-                        <div class="serv-img"> <img src="images/techstack/se2.png" alt="wordpress"> </div>
-                        <h3>Pseudoclass</h3>
-                        <p>An OOP framework for Node.js and the browser. Emulating classical inheritence patterns in JavaScript isn't easy, but Pseudoclass makes it a breeze by adding sweet syntactic sugar for prototypal inheritance.</p>
+
+                    <!-- Physijs -->
+                    <div class="tech-grid">
+                        <a href="http://chandlerprall.github.io/Physijs/" target="_blank"><img src="images/techstack/physijs.gif" alt="Physijs"></a>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+                    <!-- Grunt -->
+                    <div class="tech-grid">
+                        <a href="http://gruntjs.com/" target="_blank"><img src="images/techstack/grunt.gif" alt="Grunt"></a>
+                    </div>
+
+                    <!-- Mocha -->
+                    <div class="tech-grid">
+                        <a href="http://visionmedia.github.io/mocha/" target="_blank"><img src="images/techstack/mocha.gif" alt="Mocha"></a>
+                    </div>
+
+                    <!-- Pseudoclass -->
+                    <div class="tech-grid">
+                        <a href="http://lazd.github.io/PseudoClass/" target="_blank"><img src="images/techstack/pseudoclass.gif" alt="Pseudoclass"></a>
+                    </div>
+                </div> <!-- .tech-wrapper -->
+            </div> <!-- .row-fluid -->
+        </div> <!-- .container -->
+    </section> <!-- .techstack -->
 
     <!--
     ==================================
