--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
                             <h3 class="team-member-name">Brandon Cooper</h3>
                         </div>
                         <ul class="team-member-social">
-                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
-                            <li><a href="#"><i class="icon-github"></i></a></li>
-                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="https://github.com/cooperjbrandon" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="http://www.linkedin.com/in/cooperjbrandon" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="http://cooperjbrandon.com" target="_blank"><i class="icon-home"></i></a></li>
                         </ul>
                     </div>
 
@@ -308,9 +308,9 @@
                             <h3 class="team-member-name">Eric Hannum</h3>
                         </div>
                         <ul class="team-member-social">
-                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
-                            <li><a href="#"><i class="icon-github"></i></a></li>
-                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="https://github.com/ehannum" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="http://www.linkedin.com/in/erichannum" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="http://www.starstufflabs.com" target="_blank"><i class="icon-home"></i></a></li>
                         </ul>
                     </div>
 
@@ -322,9 +322,8 @@
                             <h3 class="team-member-name">Andrew Lu</h3>
                         </div>
                         <ul class="team-member-social">
-                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
-                            <li><a href="#"><i class="icon-github"></i></a></li>
-                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="https://github.com/steinernein" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="http://linkedin.com/in/steinernein" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
                         </ul>
                     </div>
 
@@ -336,9 +335,10 @@
                             <h3 class="team-member-name">Joao Stein</h3>
                         </div>
                         <ul class="team-member-social">
-                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
-                            <li><a href="#"><i class="icon-github"></i></a></li>
-                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="https://twitter.com/joaostein" target="_blank"><i class="icon-twitter-sign"></i></a></li>
+                            <li><a href="https://github.com/joaostein" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="http://www.linkedin.com/in/joaostein/en" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="http://jstein.me" target="_blank"><i class="icon-home"></i></a></li>
                         </ul>
                     </div>
 
@@ -351,9 +351,10 @@
                             <h3 class="team-member-name">Sam Stites</h3>
                         </div>
                         <ul class="team-member-social">
-                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
-                            <li><a href="#"><i class="icon-github"></i></a></li>
-                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="https://twitter.com/samstites" target="_blank"><i class="icon-twitter-sign"></i></a></li>
+                            <li><a href="https://github.com/stites" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/stites" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="http://stites.io/" target="_blank"><i class="icon-home"></i></a></li>
                         </ul>
                     </div>
                 </div> <!-- .team-member-row -->
@@ -367,9 +368,8 @@
                             <h3 class="team-member-name">Andrew Spade</h3>
                         </div>
                         <ul class="team-member-social">
-                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
-                            <li><a href="#"><i class="icon-github"></i></a></li>
-                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="https://github.com/DodekaHydra" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="http://www.linkedin.com/pub/andrew-spade/73/348/225" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
                         </ul>
                     </div>
 
@@ -381,9 +381,9 @@
                             <h3 class="team-member-name">Gary Ryan</h3>
                         </div>
                         <ul class="team-member-social">
-                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
-                            <li><a href="#"><i class="icon-github"></i></a></li>
-                            <li><a href="http://www.linkedin.com/in/garytryan"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="https://github.com/garytryan" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="http://www.linkedin.com/in/garytryan" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="http://garyryan.info/" target="_blank"><i class="icon-home"></i></a></li>
                         </ul>
                     </div>
 
@@ -395,9 +395,8 @@
                             <h3 class="team-member-name">Felix Tripier</h3>
                         </div>
                         <ul class="team-member-social">
-                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
-                            <li><a href="#"><i class="icon-github"></i></a></li>
-                            <li><a href="http://www.linkedin.com/pub/felix-tripier/70/2b/a35/"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="https://github.com/ftripier" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="http://www.linkedin.com/pub/felix-tripier/70/2b/a35/" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
                         </ul>
                     </div>
 
@@ -409,9 +408,9 @@
                             <h3 class="team-member-name">Phillip Alexander</h3>
                         </div>
                         <ul class="team-member-social">
-                            <li><a href="#"><i class="icon-twitter-sign"></i></a></li>
-                            <li><a href="#"><i class="icon-github"></i></a></li>
-                            <li><a href="#"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="https://github.com/phillipalexander" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="http://www.linkedin.com/in/phillipalexander" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
+                            <li><a href="http://phillipalexander.io/" target="_blank"><i class="icon-home"></i></a></li>
                         </ul>
                     </div>
                 </div> <!-- .team-member-row -->
