fix(team): add correct roles and responsibilities on the project for each team member

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     <!--====== Brandon Cooper  ======-->
                     <div class="team-member team-member-first">
                         <div class="team-member-info">
-                            <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                            <p class="team-role">NPC Artificial Intelligence, Gameplay Mode Design, Multiplayer</p>
                             <img class="team-member-picture" src="images/team/BrandonCooper.jpg" alt="image">
                             <h3 class="team-member-name">Brandon Cooper</h3>
                         </div>
@@ -303,7 +303,7 @@
                     <!--====== Eric Hannum  ======-->
                     <div class="team-member">
                         <div class="team-member-info">
-                            <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                            <p class="team-role">Oulus Rift Integration, Flight Controls, In-Game UI, Aditional Graphics, Lighting</p>
                             <img class="team-member-picture" src="images/team/EricHannum.jpg" alt="image">
                             <h3 class="team-member-name">Eric Hannum</h3>
                         </div>
@@ -317,7 +317,7 @@
                     <!--====== Andrew Lu  ======-->
                     <div class="team-member">
                         <div class="team-member-info">
-                            <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                            <p class="team-role">Server-Side Predictive Player Movement, Socket.io Integration</p>
                             <img class="team-member-picture" src="images/team/AndrewLu.jpg" alt="image">
                             <h3 class="team-member-name">Andrew Lu</h3>
                         </div>
@@ -330,7 +330,7 @@
                     <!--====== Joao Stein ======-->
                     <div class="team-member">
                         <div class="team-member-info">
-                            <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                            <p class="team-role">NPC Controller, Artificial Intelligence, Unit Testing, Website Development</p>
                             <img class="team-member-picture" src="images/team/JoaoStein.jpg" alt="image">
                             <h3 class="team-member-name">Joao Stein</h3>
                         </div>
@@ -346,7 +346,7 @@
                     <!--====== Sam Stites ======-->
                     <div class="team-member">
                         <div class="team-member-info">
-                            <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                            <p class="team-role">Project Manager, Unit Testing, Network Optimization, Server-Side Predictive Physics</p>
                             <img class="team-member-picture" src="images/team/SamStites.jpg" alt="image">
                             <h3 class="team-member-name">Sam Stites</h3>
                         </div>
