--- a/index.html
+++ b/index.html
@@ -135,31 +135,31 @@
             <div class="row-fluid">
                 <div class="controls-wrapper clearfix">
                     <!-- Pitch -->
-                    <div class="controls span2">
+                    <div class="controls">
                         <h3>Pitch</h3>
                         <p><span>⬆<br>⬇</span></p>
                     </div>
 
                     <!-- Roll -->
-                    <div class="controls span2">
+                    <div class="controls">
                         <h3>Roll</h3>
                         <p><span>a<br>d</span></p>
                     </div>
 
                     <!-- Yaw -->
-                    <div class="controls span2">
+                    <div class="controls">
                         <h3>Yaw</h3>
                         <p><span>⬅<br>➡</span></p>
                     </div>
 
                     <!-- Thrust -->
-                    <div class="controls span2">
+                    <div class="controls">
                         <h3>Thrust</h3>
                         <p><span>w<br>s</span></p>
                     </div>
 
                     <!-- Fire -->
-                    <div class="controls span2">
+                    <div class="controls">
                         <h3>Fire</h3>
                         <p><span>Click<br>Space</span></p>
                     </div>
@@ -167,25 +167,25 @@
 
                 <div class="controls-wrapper clearfix">
                     <!-- Menu -->
-                    <div class="controls span2">
+                    <div class="controls">
                         <h3>Menu</h3>
                         <p><span>Q</span></p>
                     </div>
 
                     <!-- Rotate targets -->
-                    <div class="controls span2">
+                    <div class="controls">
                         <h3>Targeting</h3>
                         <p><span>E</span></p>
                     </div>
 
                     <!-- Toggle Camera view -->
-                    <div class="controls span2">
+                    <div class="controls">
                         <h3>Camera</h3>
                         <p><span>V</span></p>
                     </div>
 
                     <!-- Fullscreen -->
-                    <div class="controls span2">
+                    <div class="controls">
                         <h3>Fullscreen</h3>
                         <p><span>Enter</span></p>
                     </div>
