feature(responsive): add styles to make website looks nice on max-width: 767px

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="navbar-inner">
 
                     <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a>
+                    <!-- <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a> -->
 
                     <!-- Everything you want hidden at 940px or less, place within here -->
                     <a href="http://app.satellite-game.com"><button class="btn btn-medium">Play Now!</button></a>
