feature(responsive - quickstart): add styles and refactor HTML to make website looks nice on max-width: 480px

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
                     <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
                     <!-- <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a> -->
 
-                    <!-- Everything you want hidden at 940px or less, place within here -->
                     <a href="http://app.satellite-game.com"><button class="btn btn-medium">Play Now!</button></a>
 
                     <ul class="navigation">
@@ -133,63 +132,59 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci molestiae quibusdam perferendis non praesentium fuga assumenda! Iste similique optio officiis sapiente nihil dolorem ex harum officia ipsum quae. Provident, porro.</p>
             </div>
             <div class="row-fluid">
-                <div class="controls-wrapper clearfix">
-                    <!-- Pitch -->
-                    <div class="controls">
-                        <h3>Pitch</h3>
-                        <p><span>⬆<br>⬇</span></p>
-                    </div>
+                <!-- Pitch -->
+                <div class="controls">
+                    <h3>Pitch</h3>
+                    <p><span>⬆<br>⬇</span></p>
+                </div>
 
-                    <!-- Roll -->
-                    <div class="controls">
-                        <h3>Roll</h3>
-                        <p><span>a<br>d</span></p>
-                    </div>
+                <!-- Roll -->
+                <div class="controls">
+                    <h3>Roll</h3>
+                    <p><span>a<br>d</span></p>
+                </div>
 
-                    <!-- Yaw -->
-                    <div class="controls">
-                        <h3>Yaw</h3>
-                        <p><span>⬅<br>➡</span></p>
-                    </div>
+                <!-- Yaw -->
+                <div class="controls">
+                    <h3>Yaw</h3>
+                    <p><span>⬅<br>➡</span></p>
+                </div>
 
-                    <!-- Thrust -->
-                    <div class="controls">
-                        <h3>Thrust</h3>
-                        <p><span>w<br>s</span></p>
-                    </div>
+                <!-- Thrust -->
+                <div class="controls">
+                    <h3>Thrust</h3>
+                    <p><span>w<br>s</span></p>
+                </div>
 
-                    <!-- Fire -->
-                    <div class="controls">
-                        <h3>Fire</h3>
-                        <p><span>Click<br>Space</span></p>
-                    </div>
-                </div>  <!-- .controls-wrapper -->
+                <!-- Fire -->
+                <div class="controls">
+                    <h3>Fire</h3>
+                    <p><span>Click<br>Space</span></p>
+                </div>
 
-                <div class="controls-wrapper clearfix">
-                    <!-- Menu -->
-                    <div class="controls">
-                        <h3>Menu</h3>
-                        <p><span>Q</span></p>
-                    </div>
+                <!-- Menu -->
+                <div class="controls controls-small">
+                    <h3>Menu</h3>
+                    <p><span>Q</span></p>
+                </div>
 
-                    <!-- Rotate targets -->
-                    <div class="controls">
-                        <h3>Targeting</h3>
-                        <p><span>E</span></p>
-                    </div>
+                <!-- Rotate targets -->
+                <div class="controls controls-small">
+                    <h3>Targeting</h3>
+                    <p><span>E</span></p>
+                </div>
 
-                    <!-- Toggle Camera view -->
-                    <div class="controls">
-                        <h3>Camera</h3>
-                        <p><span>V</span></p>
-                    </div>
+                <!-- Toggle Camera view -->
+                <div class="controls controls-small">
+                    <h3>Camera</h3>
+                    <p><span>V</span></p>
+                </div>
 
-                    <!-- Fullscreen -->
-                    <div class="controls">
-                        <h3>Fullscreen</h3>
-                        <p><span>Enter</span></p>
-                    </div>
-                </div> <!-- .controls-wrapper -->
+                <!-- Fullscreen -->
+                <div class="controls controls-small">
+                    <h3>Fullscreen</h3>
+                    <p><span>Enter</span></p>
+                </div>
             </div>
         </div>
     </section>
