feature(responsive - tech stack): add styles to make website looks nice on max-width: 480px

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             </div>
 
             <div class="row-fluid">
-                <div class="tech-wrapper">
+                <div class="tech-wrapper clearfix">
                     <!-- Node.js -->
                     <div class="tech-grid">
                         <a href="http://nodejs.org/" target="_blank"><img src="images/techstack/node.gif" alt="Node.js"></a>
