feature(menu): add js logic to toggle menu class, create basic menu markup with style

--- a/index.html
+++ b/index.html
@@ -59,11 +59,15 @@
                 <div class="navbar-inner">
 
                     <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-                    <!-- <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a> -->
+                    <a class="nav-condensed-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </a>
 
                     <a href="http://app.satellite-game.com"><button class="btn btn-medium">Play Now!</button></a>
 
-                    <ul class="navigation">
+                    <ul class="navigation notVisible">
                         <li data-section="1" data-toggle="collapse" data-target=".nav-collapse">Home</li>
                         <li data-section="2" data-toggle="collapse" data-target=".nav-collapse">About</li>
                         <li data-section="3" data-toggle="collapse" data-target=".nav-collapse">Quickstart</li>
@@ -422,7 +426,6 @@
     <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
     <script type="text/javascript" src="js/modernizr.custom.97074.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/application.js"></script>
 </body>
 </html>
