feature(menu): add condensed menu for low screen resolution

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                     <a href="http://app.satellite-game.com"><button class="btn btn-medium">Play Now!</button></a>
 
-                    <ul class="navigation notVisible">
+                    <ul class="navigation">
                         <li data-section="1" data-toggle="collapse" data-target=".nav-collapse">Home</li>
                         <li data-section="2" data-toggle="collapse" data-target=".nav-collapse">About</li>
                         <li data-section="3" data-toggle="collapse" data-target=".nav-collapse">Quickstart</li>
