--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="row-fluid title">
                 <h1>Quickstart</h1>
                 <h2>How to play</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci molestiae quibusdam perferendis non praesentium fuga assumenda! Iste similique optio officiis sapiente nihil dolorem ex harum officia ipsum quae. Provident, porro.</p>
+                <p>The object of the game is to destroy enemy ships and enemy bases. There are two game modes: Free-for-all and Invasion. In Free-for-all, everyone is an enemy. In Invasion, you are either on the Alliance team or Rebel team, and the object of the game is to destroy the enemy base. Both game modes have the option to play against non-player-controllers as well (i.e. play against the computer).</p>
             </div>
             <div class="row-fluid">
                 <!-- Pitch -->
