feature(footer): add footer with Hack Reactor credit

--- a/index.html
+++ b/index.html
@@ -415,6 +415,16 @@
 
     <!--
     ==================================
+    Footer
+    ==================================
+    -->
+
+    <footer class="main-footer">
+        <p>Produced at <a href="http://www.hackreactor.com" target="_blank">Hack Reactor</a></p>
+    </footer>
+
+    <!--
+    ==================================
     Scripts
     ==================================
     -->
