--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <div class="team-member">
                     <div class="team-member-info">
                         <p class="team-role">NPC Artificial Intelligence, Gameplay Mode Design, Multiplayer</p>
-                        <img class="team-member-picture" src="images/team/BrandonCooper.jpg" alt="image">
+                        <img class="team-member-picture" src="images/team/BrandonCooper.jpg" alt="Brandon Cooper image">
                         <h3 class="team-member-name">Brandon Cooper</h3>
                     </div>
                     <ul class="team-member-social">
@@ -302,7 +302,7 @@
                 <div class="team-member">
                     <div class="team-member-info">
                         <p class="team-role">Oulus Rift Integration, Flight Controls, In-Game UI, Aditional Graphics, Lighting</p>
-                        <img class="team-member-picture" src="images/team/EricHannum.jpg" alt="image">
+                        <img class="team-member-picture" src="images/team/EricHannum.jpg" alt="Eric Hannum image">
                         <h3 class="team-member-name">Eric Hannum</h3>
                     </div>
                     <ul class="team-member-social">
@@ -316,7 +316,7 @@
                 <div class="team-member">
                     <div class="team-member-info">
                         <p class="team-role">Server-Side Predictive Player Movement, Socket.io Integration</p>
-                        <img class="team-member-picture" src="images/team/AndrewLu.jpg" alt="image">
+                        <img class="team-member-picture" src="images/team/AndrewLu.jpg" alt="Andrew Lu image">
                         <h3 class="team-member-name">Andrew Lu</h3>
                     </div>
                     <ul class="team-member-social">
@@ -329,7 +329,7 @@
                 <div class="team-member">
                     <div class="team-member-info">
                         <p class="team-role">NPC Controller, Artificial Intelligence, Unit Testing, Website Development</p>
-                        <img class="team-member-picture" src="images/team/JoaoStein.jpg" alt="image">
+                        <img class="team-member-picture" src="images/team/JoaoStein.jpg" alt="Joao Stein image">
                         <h3 class="team-member-name">Joao Stein</h3>
                     </div>
                     <ul class="team-member-social">
@@ -345,7 +345,7 @@
                 <div class="team-member">
                     <div class="team-member-info">
                         <p class="team-role">Project Manager, Unit Testing, Network Optimization, Server-Side Predictive Physics</p>
-                        <img class="team-member-picture" src="images/team/SamStites.jpg" alt="image">
+                        <img class="team-member-picture" src="images/team/SamStites.jpg" alt="Sam Stites image">
                         <h3 class="team-member-name">Sam Stites</h3>
                     </div>
                     <ul class="team-member-social">
@@ -360,7 +360,7 @@
                 <div class="team-member">
                     <div class="team-member-info">
                         <p class="team-role">Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
-                        <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="image">
+                        <img class="team-member-picture" src="images/team/AndrewSpade.jpg" alt="Andrew Spade image">
                         <h3 class="team-member-name">Andrew Spade</h3>
                     </div>
                     <ul class="team-member-social">
@@ -373,7 +373,7 @@
                 <div class="team-member">
                     <div class="team-member-info">
                         <p class="team-role">Combat Mechanics, Weapon Design, Lighting, Particle Systems, Pyrotechnics</p>
-                        <img class="team-member-picture" src="images/team/GaryRyan.jpg" alt="image">
+                        <img class="team-member-picture" src="images/team/GaryRyan.jpg" alt="Gary Ryan image">
                         <h3 class="team-member-name">Gary Ryan</h3>
                     </div>
                     <ul class="team-member-social">
@@ -387,7 +387,7 @@
                 <div class="team-member">
                     <div class="team-member-info">
                         <p class="team-role">HUD, Flight Controls, Game Logic, Multiplayer Support, Audio Design</p>
-                        <img class="team-member-picture" src="images/team/FelixTrepier.jpg" alt="image">
+                        <img class="team-member-picture" src="images/team/FelixTrepier.jpg" alt="Feliz Trepier image">
                         <h3 class="team-member-name">Felix Tripier</h3>
                     </div>
                     <ul class="team-member-social">
@@ -400,13 +400,28 @@
                 <div class="team-member">
                     <div class="team-member-info">
                         <p class="team-role">Team Lead, Client-Server Architecture, Build Automation, Website Design</p>
-                        <img class="team-member-picture" src="images/team/PhillipAlexander.jpg" alt="image">
+                        <img class="team-member-picture" src="images/team/PhillipAlexander.jpg" alt="Phillip Alexander image">
                         <h3 class="team-member-name">Phillip Alexander</h3>
                     </div>
                     <ul class="team-member-social">
                         <li><a href="https://github.com/phillipalexander" target="_blank"><i class="icon-github"></i></a></li>
                         <li><a href="http://www.linkedin.com/in/phillipalexander" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
                         <li><a href="http://phillipalexander.io/" target="_blank"><i class="icon-home"></i></a></li>
+                    </ul>
+                </div>
+
+                <!--====== Larry Davis ======-->
+                <div class="team-member">
+                    <div class="team-member-info">
+                        <p class="team-role">Eventing Engine, OOP Structure, Game Controls</p>
+                        <img class="team-member-picture" src="images/team/LarryDavis.jpg" alt="Larry Davis image">
+                        <h3 class="team-member-name">Larry Davis</h3>
+                    </div>
+                    <ul class="team-member-social">
+                        <li><a href="https://twitter.com/lazdnet" target="_blank"><i class="icon-twitter-sign"></i></a></li>
+                        <li><a href="https://github.com/lazd" target="_blank"><i class="icon-github"></i></a></li>
+                        <li><a href="http://www.linkedin.com/pub/larry-davis/30/b10/505" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
+                        <li><a href="http://lazd.github.io/" target="_blank"><i class="icon-home"></i></a></li>
                     </ul>
                 </div>
             </div> <!-- #members -->
