[hotfix] game link change
changed heroku link to use play.satellite.io

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <span></span>
                     </a>
 
-                    <a href="http://satellite-game.herokuapp.com/"><button class="btn btn-medium">Play Now!</button></a>
+                    <a href="http://play.satellite.io/"><button class="btn btn-medium">Play Now!</button></a>
 
                     <ul class="navigation notVisible">
                         <li data-section="1" data-toggle="collapse" data-target=".nav-collapse">Home</li>
@@ -202,7 +202,7 @@
     <div class="row-fluid "  id="subArea3">
         <div class="container ">
             <div class="row-fluid">
-            <a href="http://satellite-game.herokuapp.com/"><button class="btn btn-large">Play Now!</button></a>
+            <a href="http://play.satellite.io/"><button class="btn btn-large">Play Now!</button></a>
             </div>
         </div>
     </div>
